@@ -2475,6 +2475,10 @@ SOURCE=.\src\wpc\ltdgames.c
 # End Source File
 # Begin Source File
 
+SOURCE=.\src\wpc\luckydraw.c
+# End Source File
+# Begin Source File
+
 SOURCE=.\src\wpc\mac.c
 # End Source File
 # Begin Source File
