@@ -3786,6 +3786,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\wpc\luckydraw.c"
+					>
+				</File>
+				<File
 					RelativePath=".\src\wpc\mac.c"
 					>
 				</File>
