@@ -1407,6 +1407,7 @@ echo regsvr32 exec. time &gt; "$(OutDir)regsvr32.trg"
     <ClCompile Include="src\wpc\lancelot.c" />
     <ClCompile Include="src\wpc\ltd.c" />
     <ClCompile Include="src\wpc\ltdgames.c" />
+    <ClCompile Include="src\wpc\luckydraw.c" />
     <ClCompile Include="src\wpc\mac.c" />
     <ClCompile Include="src\wpc\mech.c" />
     <ClCompile Include="src\wpc\mephisto.c" />
